web-infras/parser/tests/fixtures/esprima/ES6/rest-parameter/invalid-setter-rest/output.txt
[SyntaxError]: Setter function argument must not be a rest parameter (1,13)
1|x = { set f(...y) {} }
 |           ^
